# agent-roadmap-notes

docs/: cross-cutting-concerns.md  mental-model.md
phase_01-a/: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  architecture.md  data-design.md  pyproject.toml  tasks.md  tools.py  user-stories.md
phase_01-a/tests/: test_tools.py
